syntax = "proto3";

option go_package = "alien-contact-detector/internal/pkg";

package proto;

service TransmitterService {
 rpc GenerateFrequency(FrequencyRequest) returns (stream Frequency);
}
message FrequencyRequest {
  int32 num_values = 1; // Количество значений для генерации
}

message Frequency {
  string session_id = 1;
  double frequency = 2;
  int64 timestamp = 3;
}